feat: html architecture created

--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
     <header>
         <h1>Carambar & Co</h1>
     </header>
+    <main>
+        <article class="card">
+            <div>
+                <h3>👋 Etes-vous prêt pour une barre de rire ?</h3>
+            </div>
+            <div>
+                <button>Découvrir la blague du jour</button>
+            </div>
+        </article>
+    </main>
+    <footer>
+        Projet CDA - Test rechnique
+    </footer>
 
 </body>
 
