feat: html and style done

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     </header>
     <main>
         <article class="card">
-            <div>
-                <h3>👋 Etes-vous prêt pour une barre de rire ?</h3>
+            <div class="joke-container">
+                <h3>👋 Etes-vous prêt pour une barre de rire ? 😂</h3>
             </div>
             <div>
-                <button>Découvrir la blague du jour</button>
+                <button class="joke-btn">Je veux rire !</button>
             </div>
         </article>
     </main>
     <footer>
-        Projet CDA - Test rechnique
+        <p>Projet CDA - Test technique</p>
     </footer>
 
 </body>
